--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,20 @@
-<resources>
+<?xml version="1.0" encoding="utf-8"?>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Night theme uses the same parent; colors are handled by Material3 -->
-    <style name="Theme.GirlSpace" parent="Theme.Material3.DayNight.NoActionBar" />
+    <!-- Dark theme: same as day but optional customizations -->
+    <style name="Theme.GirlSpace" parent="Theme.Material3.DayNight">
+
+        <!-- No Action Bar -->
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+
+        <!-- Transparent system bars -->
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:overScrollMode">never</item>
+
+    </style>
 
 </resources>
